<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Online Example</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="names">Full Names</string>
    <string name="edtEmail">Email Address</string>
    <string name="phone">Phone Number</string>
    <string name="course">Course</string>
    <string name="register">Register</string>
    <string name="title_activity_all_students">AllStudentsActivity</string>
    <string name="view_students">View Students</string>
    <string name="save_locally">Save Locally</string>
    <string name="count">Count Records</string>

</resources>